<resources>
    <string name="app_name">myMemories</string>

    <string name="mainmemobrowse_rec_button">Record</string>
    <string name="mainmemobrowse_filter_button">Filter</string>
    <string name="mainmemobrowse_start_playing">Start playing</string>
    <string name="mainmemobrowse_stop_playing">Stop playing</string>
    <string name="mainmemobrowse_start_recording">Start recording</string>
    <string name="mainmemobrowse_stop_recording">Stop recording</string>

    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
    <string name="fingerprintauthentication_permission">Please enable the fingerprint permission</string>
    <string name="fingerprintauthentication_reg_fingerprint">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="fingerprintauthentication_enable_lockscreen">Please enable lockscreen security in your device\'s Settings</string>
    <string name="fingerprintauthentication_icon_description">An icon of a fingerprint</string>
    <string name="titel">Titel:</string>
    <string name="save">Save</string>
    <string name="name_of_recording">Name of recording</string>
    <string name="empty_title">Please insert a title before you save your recording!</string>
    <string name="overwrite_dialog">Would you like to overwrite your existing memo with the same name?</string>
    <string name="overwrite_button_1">Overwrite</string>
    <string name="overwrite_button_2">Cancel</string>
    <string name="empty_recording">Nothing has been recorded yet.</string>
    <string name="delete">delete</string>
    <string name="empty_search_string">Please insert a search string.</string>
    <string name="search_and_press_filter">Search and press Filter</string>
</resources>
